kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: estafette
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: estafette-ci-web
  namespace: estafette
  labels:
    app: estafette-ci-web
    team: tooling
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "${ALLOW_INGRESS_OFFICES}"
    estafette.io/cloudflare-dns: "true"
    estafette.io/cloudflare-proxy: "true"
    estafette.io/cloudflare-hostnames: "${HOSTNAMES}"
spec:
  tls:
  - hosts:
    - ${HOSTNAMES}
    secretName: estafette-ci-web-letsencrypt-certificate
  rules:
  - host: ${HOSTNAMES}
    http:
      paths:
      - path: /
        backend:
          serviceName: estafette-ci-web
          servicePort: https
---
apiVersion: v1
kind: Service
metadata:
  name: estafette-ci-web
  namespace: estafette
  labels:
    app: estafette-ci-web
    team: tooling
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/probe-path: "/robots.txt"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  selector:
    app: estafette-ci-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estafette-ci-web
  namespace: estafette
  labels:
    app: estafette-ci-web
    team: tooling
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: estafette-ci-web
  template:
    metadata:
      labels:
        app: estafette-ci-web
        team: tooling
        version: ${VERSION}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9001"
        prometheus.io/scrape-nginx-sidecar: "true"
    spec:
      serviceAccount: estafette-ci-web
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - estafette-ci-web
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: In
                values:
                - "true"
      containers:
      - name: estafette-ci-web
        image: estafette/estafette-ci-web:${GO_PIPELINE_LABEL}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: ${CPU_REQUEST}
            memory: ${MEMORY_REQUEST}
          limits:
            cpu: ${CPU_LIMIT}
            memory: ${MEMORY_LIMIT}
        ports:
        - name: web
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /robots.txt
            port: web
          initialDelaySeconds: 30
          timeoutSeconds: 1
      - name: estafette-ci-web-openresty
        image: estafette/openresty-sidecar:1.13.6.1-alpine
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 10Mi
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: nginx-liveness
          containerPort: 82
        - name: nginx-readiness
          containerPort: 81
        - name: nginx-prom
          containerPort: 9101
        volumeMounts:
        - name: ssl-certificate
          mountPath: /etc/ssl/private
        livenessProbe:
          httpGet:
            path: /liveness
            port: nginx-liveness
          initialDelaySeconds: 15
        readinessProbe:
          httpGet:
            path: /readiness
            port: nginx-readiness
      volumes:
      - name: ssl-certificate
        secret:
          secretName: estafette-ci-web-letsencrypt-certificate
